fix changepassword modal on mobile

--- a/wbinsights/web/static/web/css/profile.css
+++ b/wbinsights/web/static/web/css/profile.css
@@ -121,7 +121,6 @@
 .prof-logout-btn {
     background-color: #ffeaea;
     border: none;
-    margin-left: 10px;
     color: #dd3838;
 }
 
